// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShippingMethodDisplay component should renders correctly props are present 1`] = `
<View>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      className="heading"
      color="gray.900"
      dataLocator=""
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="Shipping Method"
      textDecoration={null}
    />
  </Styled(Text)>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs16"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text="Standard - Free"
      textDecoration={null}
    />
  </Styled(Text)>
</View>
`;

exports[`ShippingMethodDisplay component should renders correctly props not present 1`] = `
<View>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      className="heading"
      color="gray.900"
      dataLocator=""
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      textDecoration={null}
    />
  </Styled(Text)>
  <Styled(Text)>
    <Styled(BodyCopy)
      accessibilityText=""
      color="gray.900"
      dataLocator=""
      fontSize="fs16"
      fontWeight="regular"
      margin={null}
      mobileFontFamily="secondary"
      numberOfLines={null}
      text=""
      textDecoration={null}
    />
  </Styled(Text)>
</View>
`;
